--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -701,24 +701,7 @@ While this element of the learning design is beyond the main remit of this study
 |Teacher stress if they are not able to support a very diverse set of features demanded by students working on diverse kinds of games.  | Limit the type of game to one kind. Offer a significant but limited menu of missions that users can add. Offer written and visual support documents which learners can access independently of facilitators|
 |  Facilitators may need to justify learning happening and struggle to see this in-situ if unfamiliar with the game making process. This may restrict openness of activities to better assess and support learning. | A map of learning dimensions flexibly linked to main missions/patterns can be used by both learners and facilitators.  |   |
 |  Challenges adapting resources to a curriculum environment |  There were some additional changes in the way that design patterns were presented to learners mirroring design patterns on other domains including: name; need ; related patterns. In addition related concepts in computational thinking and design processes which are promoted as part of the recent computing curriculum were included and linked to a learning dimensions map. |   
-|Systems concepts are embedded in many games but the process of direct teaching of such systems can be complex and interrupt and distract from other design activities.   |  Systems related missions were designed. (If so not clearly tested) Challenge section in particular mirrors systems concepts.
-
-Extra missions which highlight game challenge and user experience may help learners to explore systems concepts within the game context |   
-
-
-
-**Addition of a Game Challenge section**
-
-I wanted to explore the possibility to use this model to explore systems thinking. There is precedent to do this in GSM.
-
-It was driven in a response to meaningful missions which helped guide a focus on game play.
-
-I created such missions (outlined in Methods chapter)
-Added game design patterns based on challenge - find source Schnell & GSM literature (their terminology is Game elements)
-And then updated the learning map to highlight potential concepts to be learned.
-
-
-
+|Systems concepts are embedded in many games but the process of direct teaching of such systems can be complex and interrupt and distract from other design activities.   |  Systems related design patterns were identified and placed in a challenge themed section. Extra missions which highlight game challenge and user experience may help learners to explore systems concepts within the game context. (outlined in Methods chapter -  use Schnell & GSM literature = their terminology is Game elements)|   
 
 
 #### Resolving the conflict by minimising elements in an informal setting
@@ -727,9 +710,8 @@ Ultimately, I gave up on this approach as it did not align with the view of agen
 
 Unknowingly aligning with Matusov's discussion on the negative impact on authorial agency of processes designed to align with curricular goals, I put off introducing the learning map in to the informal design process.
 
-**Learning dimensions map**
 
-This map was designed to link with particular conceptions of learning whilst still retaining a sense of the uniqueness of the affordances of this design. The settings are, CT in school curriculums, systems thinking, design approaches. These align broadly with a STEM approach. The rationale behind this is that Game Making commonly aligns with these curriculum areas and they are particularly suited to explore via iterative game making.
+The learning dimensions map was designed to link with particular conceptions of learning whilst still retaining a sense of the uniqueness of the affordances of this design. The settings are, CT in school curriculums, systems thinking, design approaches. These align broadly with a STEM approach. The rationale behind this is that Game Making commonly aligns with these curriculum areas and they are particularly suited to explore via iterative game making.
 
 The process of developing the learning dimensions map was helpful for me as a researcher in that it helped decided to keep the focus on this study on more informal and organically evolving processes. This emerging perspective also developed as I read underlying ontological approaches to the socio cultural understandings of learning which problematise the separate of the content to be learned
 
