adding notes and changes based on 17.10.23 print out

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -592,11 +592,16 @@ The freedom of choice and imagination allowed by designing on paper and via pixe
 
 This section addresses my interventions to resolve the play paradox between learner expression and choice and the curricular contents that teachers may want students to find [@hoyles_pedagogy_1992].
 
+NOTE - There are two sides of contracticition, one is the clash between curricullum and choice, the other is in my hesitancy introducing aciviites using the new tools of the maps due to potential overload and not enough time. 
+
+
 I adapted and extended resources to suit use in more formal learning environments, e.g. particularly a secondary computing classroom.
 
 This conflict provoked me to create resources which could serve to pull participants towards more curricular goals. However, for these learners I did not introduce the resources consistently. This inaction on my part has been is helpful to  provide a clearer the focus of this study on the possibilities of informal spaces.
 
 SIGNPOSTING WHY THIS SECTION IS USEFUL HERE
+
+
 
 <!-- stylised in a way that mirrored a map used for navigation in a quest-themed computer game.
 
@@ -608,8 +613,8 @@ As learners traced a trail between the different island/missions they had visite
 
 I used flip chart paper and print outs to draw a coastal landscape with GDPs represented as different islands.  I asked learners to create and personalise a movable marker representing themselves. When learners selected their next mission, they moved their counter to the relevant island. Thus learners had to be intentional about their next goal and were implicitly encouraged to stick to it.
 
-![learning islands](./Pictures/navigational_paper_map.png)
-![learning islands]({{ site.imgurl }}/_posts/thesis_chapters/Pictures/navigational_paper_map.png)
+![learning islands](./Pictures/navigational_paper_map.png){width=95%}
+![learning islands]({{ site.imgurl }}/_posts/thesis_chapters/Pictures/navigational_paper_map.png){width=95%}
 _Missions as Islands_
 
 My motivations for this intervention were that it encourage a sense of community and peer learning that the process would encourage reflect on the coding concepts or other learning dimensions that they had been working with.
@@ -772,8 +777,6 @@ In journal notes and in video data I observed participants developing responses 
 <!-- In the video data analysed, there were practically no extended blockages to undertaking work related to the use of this environment. While this study does not attempt to quantify this factor, the experience compares very favourably to my experiences of using and teaching coding environments. -->
 
 There are similarities and differences between the use of code playgrounds by novices and professionals.
-
-
 
 <!-- I began by mirroring social model of learning like CoL and CoP and their propose apprenticeship-based approaches. Specifically, introducing possible code solutions to implement the ideas of participants. However, limits to my time involvement and my technical fluency hindered this process creating stress in myself and frustration and hesitancy on participants to get direct help.
 
@@ -988,23 +991,25 @@ While tensions between lack of knowledge in how to undertake activities are comm
 
 <!-- Longer form step by step tutorials are common in computing education. Examples can be found in Code Academy, and in the education resources of RPi foundation. Many examples talking learners through steps to build a game can be found online with varied amount of explanation of underlying constructs and concepts. I started my journey learning JS games using some provided by Mozilla and the Phaser developers. -->
 
-I struggled to resolve how best to provide support coherently in a way which met the tension of providing background concepts and explanations of coding constructs to those that wanted it.
+To support a hands-on approach responsive the design choices of participatns, I began by creating discreet code examples illustrating the requested elements in a minimal working game. As explored in the literature review (check this), the use of code examples or snippets in code playgrounds is a common professional problem solving practice. These code examples allow users to see the behaviour in context with the code and output side by side. While code examples existed on the Phaser website, their use there is not consistent or structured for novices. As with many developer created documentation, focused on demonstrating the code constructs in isolation rather than in the context of any particular game.
 
-I began by creating discreet code examples and then tutorials of how to add new elements to the starting game template. Code examples the first resources created. As explored in the literature review, the use of code examples or snippets is a common professional problem solving practice. They allow users to see the behaviour in context with the code and output side by side. While code examples existed on the Phaser website, their use there is not consistent or structured for novices. As with many developer created documentation, focused on demonstrating the code constructs in isolation rather than in the context of any particular game.
+So instead, I began each code snippet with a very stripped down version of the starting 2D platformer game template and added the code examples within this code framework. My rationale was that each pattern added builds familiarity with the code structure. feedback from P1 and video evidence as in Toby's proficiency supports this observation.
 
-So instead, I began each code snipped with a very stripped down version of the starting 2D platformer game template and added the code examples within this code framework. Ideally each pattern added builds familiarity with the code structure.
+For each code example I created a text based step-by-step  documentation.  While the collection of tutorials took the form of chapters of an online book, readers were encouraged to tackle them in any order. In practice each chapter was printed out for participants and linked to from the list of code examples. Thus rather than choosing a defined order readers could choose which order they wanted to add game elements. The extract outlining the use of physical maps shows an example of a Roxanne(p) helping a Richie(c) find a code tutorial to follow based on child's interests.
 
-For each code example I created a text based step-by-step  documentation.  While the collection of tutorials took the form of chapters of an online book, readers were encouraged to tackle them in any order. In practice each chapter was printed out for participants and linked to from the list of code examples. Thus rather than choosing a defined order readers could choose which order they wanted to add game elements.
+While writing self-contained tutorials added a challenge to the documentation authouring process, the documents, especially when printed became a vital resource for this community. In chapter 5 I explore the extent to which these resources can scale for use beyond this context.
 
-While writing self-contained tutorials added a challenge to the documentation authouring process, the documents, especially when printed became a vital resource for this community.
+While prioritising a responsive, informal, hands-on approach over pre-teaching concepts, I struggled to resolve how best to provide background concepts and explanations of coding constructs, a need which had arisen from parents in the feedback to P1 (see appendix 4.x).
 
+However, as these tutorials took as a starting point the code of the starting template and did not attempt to explain that, they  did not however resolve the issue of participants wanting resources that explained these core constructs and underlying concepts. Thus I created opening chapter of the online manual which were more traditional in format and contained foundational knowledge. After making the game from a template, these foundational chapters are available to explain underlying concepts that the starting template had initially abstracted away from the participants.
+
+<!-- **Meeting yourself in the middle**
 However, as these tutorials took as a starting point the code of the starting template and did not attempt to explain that, they  did not however resolve the issue of participants wanting resources that explained these core constructs and underlying concepts.
-
-**Meeting yourself in the middle**
 
 Thus I created opening chapter of the online manual which were more traditional in format and contained foundational knowledge. I wondered how to best frame the relationship between these chapters and the self-contained ones described above. In practice, as user had started with a template game that is already up and running, to use this resources which would have involved backtracking.
 
-I named this concept _meeting yourself in the middle_ to represent the possibility of retracing the process of learning from first principles. The key concept here was that after making the game from a template, these foundational chapters resources are available at any time to explain all underlying concepts that the starting template had initially abstracted away from the participants. Thus the process would have value to reinforce computing concepts present in the design. Narratively these chapters form the equivalent of a prequel for readers interested in the full story.
+
+I named this concept _meeting yourself in the middle_ to represent the possibility of retracing the process of learning from first principles. The key concept here was that after making the game from a template, these foundational chapters resources are available at any time to explain all underlying concepts that the starting template had initially abstracted away from the participants. Thus the process would have value to reinforce computing concepts present in the design. Narratively these chapters form the equivalent of a prequel for readers interested in the full story. -->
 
 <!-- An example of parent Sh interaction with long form tutorial follows. Sh engaged with the long form resources. While this process did not involve dialogue, the recording of her screen allows for a detailed description of how the resources was used.
 Sh opens browswer to see list of code Examples, navigates to page, sees list of chapters, selects GDP pattern name, then follows along.
@@ -1024,18 +1029,20 @@ Thus, there were two main ways of approaching adding a new pattern. One to exami
 
 **Using of a collection of game design patterns**
 
-while these resources were developed in response to one conflict they introduced new tensions. Specifically, users found the navigation of the resources, finding the right resources online was initially confusing. As such this barrier was in turn mitigated by printing step by step tutorials.
+While the code snippet and text resources were developed in response to one conflict they introduced new tensions. Specifically, I observed users failing or struggling to find the right resources online. I addressed this by printing step by step tutorials. However the paper based resources did not allow users to copy and paste code, a  characteristic of online code examples and tutorials which facilitates quick progress.
 
 In addition, I decided to create a web page using the same technology and hosting systems that housed the template game and remixes of participants to at as a navigational menu for the collection of code examples that had been created. For easy of navigation I also included the starting template and a link to the online book of step-by-step resources.
 
-Learning resources linked to game design patterns were presented in a grid format with images that focused on the player experience rather than underlying coding constructs.
+Learning resources linked to game design patterns were presented in a grid format with colour-coded images that focused on the player experience rather than underlying coding constructs. (MOVE DOWN?)
 
 My motivations driving this design work were to mitigate potential learner alienation from unfamiliar technical documentation through accessible and attractive design and to relating documentation to participants existing gameplay experience.
 
 
 **Tactical structuring of the pattern collection**
 
-In trying to organise and represent code examples to participants in a logical way I drew on existing frameworks of game elements. Initial design were just in response to grouping participant requests.
+In trying to organise and represent code examples to participants in a logical way I drew on existing frameworks of game elements.
+
+The design process to try to grouping participant requests was iterative and took place over an extended time frame. An example of the kind of grouping sketch used is included below as Figure 4.x.  
 
 I noted that some of these were aesthetic in nature for example; the graphical representation of game characters; adding sounds; and adding background images. Others are described in professional literature as game mechanics including: jumping on enemies; finding a door or flag to progress to the next level; and collect all food before progressing to next level. Others concerned other fundamental aspects concerning game space like the size and shape of game world and adding new levels the game.
 
@@ -1046,6 +1053,13 @@ I experimented with different categories and themes to contains the emerging gam
 _Fig 4.x. Scan of Journal Sketch of early attempt at dividing features by type and difficulty - Dated 11.3.2019_
 
 The process of sketching, revising and re-sketching the elements led me to connect this process of categorisation with the work of game theorists. I had previously used collaborative analytical techniques which drawing on academic and professional interpretations of game elements [@salen_game_2006; @schell_art_2008; @tekinbas_rules_2003]. These had been developed for use in youth-oriented Game Jams to help novice game makers hack/analysis and then adapt key elements of non-digital games, and thus build participants use of language of game design concepts before engaging in digital making [@cornish_game_2018; @institute_of_play_gamestar_nodate].
+
+
+EDIT THIS DOWN AND BE CLEAR ON THE MOTIVATION IN TERMS OF AGENCY AND BARRIERS TO PARTICPATION
+
+- Building familiarity with the code - -.  alienation barriers  
+- choice and navigations - > agency
+
 
 In my adaptation I had asked participants to do play a number of retro arcade and console games and then to complete created a printable A3 hand out which was given to participant after playing The key elements I are:
 
@@ -1065,7 +1079,11 @@ In P5 I extended the scheme to included  _System and Challenge_ patterns. These 
 
 This section has explored  detail of different themes the game pattern collection.
 
-This structure chosen to present support materials to participants mirrors and potentially reinforces the framework used initially to analyse game elements. While the process of games analysis has limited research for novice game makers, it is not the the field of learning text coding. Similarly this outcome of theming the patterns by function and  and difficulty to help build community game making activity and knowledge aligns with the work by Holopainen and colleagues on the use of pattern collections to help structure game making for adults [@holopainen2007teaching].
+
+
+This structure chosen to present support materials to participants mirrors and potentially reinforces the framework used initially to analyse game elements. While the process of games analysis has limited research for novice game makers, it is not the the field of learning text coding. Similarly this outcome of theming the patterns by function and  difficulty to help build community game making activity and knowledge aligns with the work by Holopainen and colleagues on the use of pattern collections to help structure game making for adults [@holopainen2007teaching].
+
+
 
 <!--
 My journal notes see an evolution of attempts to try to build into the program, activities which help build the participants sense of their own identities of game makers or more generally digital designers. In and early tentative attempt to define in broad strokes the types of game maker behaviour and underlying goals. In doing this I have taken inspiration from Bartle's game player types Hamari and Tuunanen, 2014). I translated player types to maker types based on notes in my observation journal and extracts from screen capture data. The following list of *Game Maker *types:
@@ -1076,7 +1094,6 @@ My journal notes see an evolution of attempts to try to build into the program, 
  -   **Glitchers:** mess around with the code trying to see if they can break it interesting ways and cause a bit of havoc for other userse positioning and if they could give examples of that behaviour.
 
 An additional rationale for this process was to help reduce potential internal bias about the kind of process that a computer programmer should adopt, echoing the call for pluralism in approaches explored earlier in our section on germ cell concept Papert and Turkle, 1990). In short, my message was to participants there are more than one way the skin a cat. When you are learning to code follow your own preferences and try to observe and reflect on what works well for you. -->
-
 
 
 ## Conclusion
